# pdf_scp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CppCheckSuppressions.cppcheck  README  basic_struct_draft.drawio  clang-tidy  clang_format.sh  ocsp_response.drawio
.cache/clangd/index/: 1.cpp.8B8386AE61B5B7A3.idx
.gear/: pdfcsp.spec  rules
.gear/tags/: list
c_bridge/: CMakeLists.txt  bridge_obj_storage.hpp  c_bridge.cpp  c_bridge.hpp  pod_structs.hpp  utils_c_bridge.cpp  utils_c_bridge.hpp
c_bridge/test/: CMakeLists.txt  test_cbridge.cpp
c_brigde/: CMakeLists.txt  bridge_obj_storage.hpp  c_bridge.cpp  c_bridge.hpp
cli/: CMakeLists.txt  cli_utils.cpp  cli_utils.hpp  options.cpp  options.hpp  signpdf.cpp  tr.hpp
cli/translation/: messages.pot  ru.po
cmake/: ClangTidy.cmake  CppCheck.cmake  Format.cmake
common/: CMakeLists.txt  boost_json.cpp  common_defs.hpp  logger_utils.cpp  logger_utils.hpp
csp/: CMakeLists.txt  Certificate2.drawio  altcsp.hpp  asn1.cpp  asn1.hpp  bes_checks.cpp  bes_checks.hpp  cerificate.hpp  cert_common_info.cpp  cert_common_info.hpp  certificate.cpp  certificate.hpp  certificate_id.cpp  certificate_id.hpp  check_result.hpp  crypto_attribute.cpp  crypto_attribute.hpp  csp.cpp  csp.hpp  hash_handler.cpp  hash_handler.hpp  i_check_stategy.hpp  message.cpp  message.hpp  message_handler.cpp  message_handler.hpp  ocsp.cpp  ocsp.hpp  p_key_handler.hpp  resolve_symbols.cpp  resolve_symbols.hpp  store_handler.cpp  store_hanler.hpp  t_checks.cpp  t_checks.hpp  typedefs.hpp  utils.cpp  utils.hpp  utils_cert.cpp  utils_cert.hpp  (+4 more)
csp/asn1/: CMakeLists.txt  asn1.cpp  asn1.hpp  asn_tsp.cpp  asn_tsp.hpp  cert_refs.cpp  cert_refs.hpp  certificate_id.cpp  certificate_id.hpp  cms.cpp  cms.hpp  d_name.cpp  d_name.hpp  ocsp.cpp  ocsp.hpp  oids.hpp  revoc_refs.cpp  revoc_refs.hpp  revoc_vals.cpp  revoc_vals.hpp
csp/checks/: CMakeLists.txt  bes_checks.cpp  bes_checks.hpp  bool_results.hpp  check_result.cpp  check_result.hpp  check_utils.cpp  check_utils.hpp  i_check_stategy.hpp  pks_checks.cpp  pks_checks.hpp  t_checks.cpp  t_checks.hpp  t_structs.hpp  x_checks.cpp  x_checks.hpp  xl_certs.hpp
csp/test/: CMakeLists.txt  test_common.cpp  test_sign_helpers.cpp  test_valid_bunch.cpp
experimental/: 1.cpp  1_no_link.cpp  CMakeLists.txt  lib_resolve.cpp  lib_resolve.hpp  resolve_symbols.cpp  resolve_symbols.hpp  with_pdf.cpp
for_poppler/: CMakeLists.txt  c_interface.cpp  c_interface.hpp  csp_for_poppl.hpp  obj_storage.hpp  structs.hpp
for_poppler/test/: CMakeLists.txt  test_poppler_lib.cpp
ipc_bridge/: CMakeLists.txt  ipc_client.cpp  ipc_client.hpp  ipc_param.hpp  ipc_provider.cpp  ipc_provider_utils.cpp  ipc_provider_utils.hpp  ipc_result.hpp  ipc_tydefs.hpp  ipc_typedefs.hpp
mrpa/: CMakeLists.txt
mrpa/test/: CMakeLists.txt  string_defs.hpp  test_common.cpp
pdf/: CMakeLists.txt  acro_form.cpp  acro_form.hpp  annotation.cpp  annotation.hpp  cross_ref_stream.cpp  cross_ref_stream.hpp  csppdf.hpp  form_x_object.cpp  form_x_object.hpp  image_obj.cpp  image_obj.hpp  pdf.cpp  pdf.hpp  pdf_annots_object_kit.hpp  pdf_csp_c.cpp  pdf_csp_c.hpp  pdf_defs.hpp  pdf_pod_structs.hpp  pdf_structs.cpp  pdf_structs.hpp  pdf_update_object_kit.hpp  pdf_utils.cpp  pdf_utils.hpp  sig_field.cpp  sig_field.hpp  sig_val.cpp  sig_val.hpp  utils.cpp  utils.hpp
pdf/test/: CMakeLists.txt  test_common.cpp  test_sign.cpp
test_files/: text_file_to_sign.txt
test_files/mrpa/invalid/: .invalid_15_ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml.kate-swp  ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml  delete_attr_6_ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml  delete_field_1_ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml  delete_field_2_ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml  delete_field_3_ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml  delete_field_4_ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml  invalid_10_ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml  invalid_11_ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml  invalid_12_ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml  invalid_13_ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml  invalid_14_ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml  invalid_15_ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml  invalid_16_ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml  invalid_17_ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml  invalid_18_ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml  invalid_19_ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml  invalid_20_ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml  invalid_21_ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml  invalid_22_ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml  invalid_23_ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml  invalid_24_ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml  invalid_25_ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml  invalid_26_ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml  invalid_8_ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml  invalid_9_ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml  invalid_length_5_ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml  unexpcted_attr_7_ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml
test_files/mrpa/valid/: ON_EMCHD_1_928_00_01_01_01.xsd  ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.sig  ON_EMCHD_20241203_c61a40df-d38f-4800-9ba4-61a2df016993.xml  ON_EMCHD_20250523_472e846e-572b-4696-9ab1-ff839f9b0634.xml  ON_EMCHD_20250523_c59126b9-04c4-4df5-8497-c5ddb5309b87.xml
test_files/valid_files/: ON_DOVBB_20240828_cfeae40d-e613-48ff-989f-f6b45590e338.xml  ON_EMCHD_20250522_c52fc81d-c422-439f-b8e8-4d99a602f4d1.xml  ON_EMCHD_20250523_323e64bf-0958-4c4f-a8ea-c026ee742cb4.xml  ON_EMCHD_20250523_46b84724-c65b-488e-a640-ec0498da68d8.xml  img2.ppm
